--- a/PreOrclFrontEnd/Views/Casos/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Index.cshtml
@@ -1,7 +1,130 @@
-﻿
+﻿@model IEnumerable<PreOrclFrontEnd.ViewModels.VwModelCasos>
+
 @{
     ViewData["Title"] = "Index";
+
+
+    List<SelectListItem> listaEstadoCasos = (ViewBag.listaEstadoCasos as List<SelectListItem>);
 }
 
-<h2>Index</h2>
+@section Styles{
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="~/tooltipster-master/dist/css/tooltipster.bundle.min.css" />
+}
 
+<div class="breadcrumbs">
+    <div class="breadcrumbs-inner">
+        <div class="row m-0">
+            <div class="col-sm-4">
+                <div class="page-header float-left">
+                    <div class="page-title">
+                        <h1>Casos</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="page-header float-right">
+                    <div class="page-title">
+                        <ol class="breadcrumb text-right">
+                            <li><a href="#">Casos</a></li>
+                            <li><a href="#">Listado de casos</a></li>
+
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="content">
+    <!-- Animated -->
+    <div class="animated">
+        <div class="row">
+            @foreach (var itemCasos in Model)
+            {
+
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="">
+                                <strong class="card-title">@itemCasos.Casos.NombreCaso<small><span class="badge badge-@(itemCasos.Casos.EstadoCaso=="A"?"success":"warning") float-right mt-1">@(listaEstadoCasos.Where(c => c.Value == itemCasos.Casos.EstadoCaso).FirstOrDefault().Text)</span></small></strong>
+                            </div>
+                            <div class="stat-widget-five text-right">
+                                <div class="stat-content">
+                                    <div class="text-right dib">
+                                        <div class="stat-content">
+                                            <div class="text-right dib">
+                                                @*<div class="stat-text"><span class="">Listado de actividades</span></div>*@
+                                                <div class="stat-heading"> @itemCasos.Casos.FechaApertura.ToString("dd/MM/yyyy HH:mm.ss") <br/> @(itemCasos.Casos.FechaCierre.ToString() != "" ? Convert.ToDateTime(itemCasos.Casos.FechaCierre).ToString("dd/MM/yyyy HH:mm:ss") : "Sin Fecha de Cierre")</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                                </div>
+                                <div class="card-body">
+                                    <p class="card-text">@(itemCasos.Casos.Resolucion ?? "Sin resolución")</p>
+                                    <div class="stat-widget-five text-right">
+
+                                        <div class="stat-content">
+                                            <div class="text-right dib">
+                                                <div class="stat-text"><span class="">Listado de actividades</span></div>
+                                                @foreach (var itemActividadesAsistentes in itemCasos.ListVwModelActividadesAsistentes)
+                                                {
+                                                    <div class="tooltip_templates" style="display:none">
+                                                        <span id="tooltip_content">
+                                                            Fecha/Hora Inicio: @itemActividadesAsistentes.Actividades.StartTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
+                                                            Fecha/Hora Fin:    @itemActividadesAsistentes.Actividades.EndTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
+                                                            Responsable: @itemActividadesAsistentes.Responsable.Nombre @itemActividadesAsistentes.Responsable.Apellido<br />
+                                                            Asistentes:
+                                                            <br />
+                                                            @foreach (var itemAsistentes in itemActividadesAsistentes.ListVwModelAsistentes)
+                                                            {
+                                                                @($"{itemAsistentes.Asistente.Nombre} {itemAsistentes.Asistente.Apellido}")<br />
+                                                            }
+                                                        </span>
+                                                    </div>
+
+                                                    <a href="@Url.Action("Edit","Actividades",new { id=itemActividadesAsistentes.Actividades.IdActividad})" class="stat-heading toolp" data-tooltip-content="#tooltip_content" title="">
+                                                        @itemActividadesAsistentes.Actividades.NombreActividad
+                                                    </a>
+
+                                                }
+
+                                                @if (itemCasos.ListVwModelActividadesAsistentes.Count <= 0)
+                                                {
+                                                    <div class="stat-heading">Sin Actividades</div>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+
+                                </div>
+                            </div>
+                </div>
+
+            }
+
+        </div>
+        <partial name="../Modals/_LargeModalPartial" />
+    </div>
+
+</div>
+
+
+@section Scripts{
+    <script type="text/javascript" src="~/tooltipster-master/dist/js/tooltipster.bundle.min.js"></script>
+    <script>
+        jQuery(document).ready(function () {
+            jQuery('.toolp').tooltipster({
+                contentCloning: true
+            });
+        });
+    </script>
+}
