--- a/PreOrclFrontEnd/Views/Casos/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Index.cshtml
@@ -42,11 +42,18 @@
 <div class="content">
     <!-- Animated -->
     <div class="animated">
-        <div class="row">
+        
+        
+        <div class="row" id="myRow">
+            <div class="col-md-12">
+                <div class="card">
+                    <input id="myInput" type="text" class="form-control" placeholder="Filtrar..">
+                </div>
+            </div>
             @foreach (var itemCasos in Model)
             {
 
-                <div class="col-md-4">
+                <div class="col-md-4 filter">
                     <div class="card">
                         <div class="card-header">
                             <div class="">
@@ -58,55 +65,55 @@
                                         <div class="stat-content">
                                             <div class="text-right dib">
                                                 @*<div class="stat-text"><span class="">Listado de actividades</span></div>*@
-                                                <div class="stat-heading"> @itemCasos.Casos.FechaApertura.ToString("dd/MM/yyyy HH:mm.ss") <br/> @(itemCasos.Casos.FechaCierre.ToString() != "" ? Convert.ToDateTime(itemCasos.Casos.FechaCierre).ToString("dd/MM/yyyy HH:mm:ss") : "Sin Fecha de Cierre")</div>
+                                                <div class="stat-heading"> @itemCasos.Casos.FechaApertura.ToString("dd/MM/yyyy HH:mm.ss") <br /> @(itemCasos.Casos.FechaCierre.ToString() != "" ? Convert.ToDateTime(itemCasos.Casos.FechaCierre).ToString("dd/MM/yyyy HH:mm:ss") : "Sin Fecha de Cierre")</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                                </div>
-                                <div class="card-body">
-                                    <p class="card-text">@(itemCasos.Casos.Resolucion ?? "Sin resolución")</p>
-                                    <div class="stat-widget-five text-right">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">@(itemCasos.Casos.Resolucion ?? "Sin resolución")</p>
+                            <div class="stat-widget-five text-right">
 
-                                        <div class="stat-content">
-                                            <div class="text-right dib">
-                                                <div class="stat-text"><span class="">Listado de actividades</span></div>
-                                                @foreach (var itemActividadesAsistentes in itemCasos.ListVwModelActividadesAsistentes)
-                                                {
-                                                    <div class="tooltip_templates" style="display:none">
-                                                        <span id="tooltip_content">
-                                                            Fecha/Hora Inicio: @itemActividadesAsistentes.Actividades.StartTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
-                                                            Fecha/Hora Fin:    @itemActividadesAsistentes.Actividades.EndTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
-                                                            Responsable: @itemActividadesAsistentes.Responsable.Nombre @itemActividadesAsistentes.Responsable.Apellido<br />
-                                                            Asistentes:
-                                                            <br />
-                                                            @foreach (var itemAsistentes in itemActividadesAsistentes.ListVwModelAsistentes)
-                                                            {
-                                                                @($"{itemAsistentes.Asistente.Nombre} {itemAsistentes.Asistente.Apellido}")<br />
-                                                            }
-                                                        </span>
-                                                    </div>
-
-                                                    <a href="@Url.Action("Edit","Actividades",new { id=itemActividadesAsistentes.Actividades.IdActividad})" class="stat-heading toolp" data-tooltip-content="#tooltip_content" title="">
-                                                        @itemActividadesAsistentes.Actividades.NombreActividad
-                                                    </a>
-
-                                                }
-
-                                                @if (itemCasos.ListVwModelActividadesAsistentes.Count <= 0)
-                                                {
-                                                    <div class="stat-heading">Sin Actividades</div>
-                                                }
+                                <div class="stat-content">
+                                    <div class="text-right dib">
+                                        <div class="stat-text"><span class="">Listado de actividades</span></div>
+                                        @foreach (var itemActividadesAsistentes in itemCasos.ListVwModelActividadesAsistentes)
+                                        {
+                                            <div class="tooltip_templates" style="display:none">
+                                                <span id="tooltip_content">
+                                                    Fecha/Hora Inicio: @itemActividadesAsistentes.Actividades.StartTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
+                                                    Fecha/Hora Fin:    @itemActividadesAsistentes.Actividades.EndTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
+                                                    Responsable: @itemActividadesAsistentes.Responsable.Nombre @itemActividadesAsistentes.Responsable.Apellido<br />
+                                                    Asistentes:
+                                                    <br />
+                                                    @foreach (var itemAsistentes in itemActividadesAsistentes.ListVwModelAsistentes)
+                                                    {
+                                                        @($"{itemAsistentes.Asistente.Nombre} {itemAsistentes.Asistente.Apellido}")<br />
+                                                    }
+                                                </span>
                                             </div>
-                                        </div>
+
+                                            <a href="@Url.Action("Edit","Actividades",new { id=itemActividadesAsistentes.Actividades.IdActividad})" class="stat-heading toolp" data-tooltip-content="#tooltip_content" title="">
+                                                @itemActividadesAsistentes.Actividades.NombreActividad
+                                            </a>
+
+                                        }
+
+                                        @if (itemCasos.ListVwModelActividadesAsistentes.Count <= 0)
+                                        {
+                                            <div class="stat-heading">Sin Actividades</div>
+                                        }
                                     </div>
-
-
-
                                 </div>
                             </div>
+
+
+
+                        </div>
+                    </div>
                 </div>
 
             }
@@ -124,6 +131,15 @@
         jQuery(document).ready(function () {
             jQuery('.toolp').tooltipster({
                 contentCloning: true
+            });
+        });
+
+        jQuery(document).ready(function () {
+            jQuery("#myInput").on("keyup", function () {
+                var value = jQuery(this).val().toLowerCase();
+                jQuery("#myRow .filter").filter(function () {
+                    jQuery(this).toggle(jQuery(this).text().toLowerCase().indexOf(value) > -1)
+                });
             });
         });
     </script>
