--- a/PreOrclFrontEnd/Views/Casos/Create.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Create.cshtml
@@ -58,7 +58,7 @@
                             <div class="form-group">
                                 <label asp-for="NombreCaso"></label>
                                 <div class="input-group">
-                                    <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
+                                    <div class="input-group-addon"><i class="fa fa-gavel"></i></div>
                                     <input asp-for="NombreCaso" class="form-control">
                                 </div>
                                 <span asp-validation-for="NombreCaso" class="text-danger"></span>
