--- a/PreOrclFrontEnd/Views/Casos/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Index.cshtml
@@ -46,82 +46,90 @@
         
         <div class="row" id="myRow">
             <div class="col-md-12">
-                <div class="card">
+                <div class="card col-md-1">
                     <div class="input-group">
-                        <input id="myInput" type="text" class="form-control" placeholder="Filtrar..">
-                        <div class="input-group-addon"><i class="fa fa-search"></i></div>
+   
+                            <a asp-action="Create" title="Agregar caso" class="btn btn-primary">Agregar caso</a>
+
                     </div>
                 </div>
-            </div>
-            @foreach (var itemCasos in Model)
-            {
-
-                <div class="col-md-4 filter">
                     <div class="card">
-                        <div class="card-header">
-                            <div class="">
-                                <strong class="card-title"><a href="@Url.Action("Edit","Casos",new { id=itemCasos.Casos.IdCaso})"> @itemCasos.Casos.NombreCaso</a><small> - @itemCasos.Casos.Tipo<span class="badge badge-@(itemCasos.Casos.EstadoCaso=="A"?"success":"warning") float-right mt-1">@(listaEstadoCasos.Where(c => c.Value == itemCasos.Casos.EstadoCaso).FirstOrDefault().Text)</span></small></strong>
-                            </div>
-                            <div class="stat-widget-five text-right">
-                                <div class="stat-content">
-                                    <div class="text-right dib">
-                                        <div class="stat-content">
-                                            <div class="text-right dib">
-                                                @*<div class="stat-text"><span class="">Listado de actividades</span></div>*@
-                                                <div class="stat-heading"> @itemCasos.Casos.FechaApertura.ToString("dd/MM/yyyy HH:mm.ss") <br /> @(itemCasos.Casos.FechaCierre.ToString() != "" ? Convert.ToDateTime(itemCasos.Casos.FechaCierre).ToString("dd/MM/yyyy HH:mm:ss") : "Sin Fecha de Cierre")</div>
+                      
+                        <div class="input-group">
+                            <input id="myInput" type="text" class="form-control" placeholder="Filtrar..">
+                            <div class="input-group-addon"><i class="fa fa-search"></i></div>
+                        </div>
+                    </div>
+                </div>
+                @foreach (var itemCasos in Model)
+                {
+
+                    <div class="col-md-4 filter">
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="">
+                                    <strong class="card-title"><a href="@Url.Action("Edit","Casos",new { id=itemCasos.Casos.IdCaso})"> @itemCasos.Casos.NombreCaso</a><small> - @itemCasos.Casos.Tipo<span class="badge badge-@(itemCasos.Casos.EstadoCaso=="A"?"success":"warning") float-right mt-1">@(listaEstadoCasos.Where(c => c.Value == itemCasos.Casos.EstadoCaso).FirstOrDefault().Text)</span></small></strong>
+                                </div>
+                                <div class="stat-widget-five text-right">
+                                    <div class="stat-content">
+                                        <div class="text-right dib">
+                                            <div class="stat-content">
+                                                <div class="text-right dib">
+                                                    @*<div class="stat-text"><span class="">Listado de actividades</span></div>*@
+                                                    <div class="stat-heading"> @itemCasos.Casos.FechaApertura.ToString("dd/MM/yyyy HH:mm.ss") <br /> @(itemCasos.Casos.FechaCierre.ToString() != "" ? Convert.ToDateTime(itemCasos.Casos.FechaCierre).ToString("dd/MM/yyyy HH:mm:ss") : "Sin Fecha de Cierre")</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
+                            <div class="card-body">
+                                <p class="card-text">@(itemCasos.Casos.Resolucion ?? "Sin resolución")</p>
+                                <div class="stat-widget-five text-right">
 
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">@(itemCasos.Casos.Resolucion ?? "Sin resolución")</p>
-                            <div class="stat-widget-five text-right">
+                                    <div class="stat-content">
+                                        <div class="text-right dib">
+                                            <div class="stat-text"><span class="">Listado de actividades</span></div>
+                                            @foreach (var itemActividadesAsistentes in itemCasos.ListVwModelActividadesAsistentes)
+                                            {
+                                                <div class="tooltip_templates" style="display:none">
+                                                    <span id="tooltip_content">
+                                                        Fecha/Hora Inicio: @itemActividadesAsistentes.Actividades.StartTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
+                                                        Fecha/Hora Fin:    @itemActividadesAsistentes.Actividades.EndTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
+                                                        Responsable: @itemActividadesAsistentes.Responsable.Nombre @itemActividadesAsistentes.Responsable.Apellido<br />
+                                                        Asistentes:
+                                                        <br />
+                                                        @foreach (var itemAsistentes in itemActividadesAsistentes.ListVwModelAsistentes)
+                                                        {
+                                                            @($"{itemAsistentes.Asistente.Nombre} {itemAsistentes.Asistente.Apellido}")<br />
+                                                        }
+                                                    </span>
+                                                </div>
 
-                                <div class="stat-content">
-                                    <div class="text-right dib">
-                                        <div class="stat-text"><span class="">Listado de actividades</span></div>
-                                        @foreach (var itemActividadesAsistentes in itemCasos.ListVwModelActividadesAsistentes)
-                                        {
-                                            <div class="tooltip_templates" style="display:none">
-                                                <span id="tooltip_content">
-                                                    Fecha/Hora Inicio: @itemActividadesAsistentes.Actividades.StartTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
-                                                    Fecha/Hora Fin:    @itemActividadesAsistentes.Actividades.EndTime.ToString("dd/MM/yyyy HH:mm:ss")<br />
-                                                    Responsable: @itemActividadesAsistentes.Responsable.Nombre @itemActividadesAsistentes.Responsable.Apellido<br />
-                                                    Asistentes:
-                                                    <br />
-                                                    @foreach (var itemAsistentes in itemActividadesAsistentes.ListVwModelAsistentes)
-                                                    {
-                                                        @($"{itemAsistentes.Asistente.Nombre} {itemAsistentes.Asistente.Apellido}")<br />
-                                                    }
-                                                </span>
-                                            </div>
+                                                <a href="@Url.Action("Edit","Actividades",new { id=itemActividadesAsistentes.Actividades.IdActividad})" class="stat-heading toolp" data-tooltip-content="#tooltip_content" title="">
+                                                    @itemActividadesAsistentes.Actividades.NombreActividad
+                                                </a>
 
-                                            <a href="@Url.Action("Edit","Actividades",new { id=itemActividadesAsistentes.Actividades.IdActividad})" class="stat-heading toolp" data-tooltip-content="#tooltip_content" title="">
-                                                @itemActividadesAsistentes.Actividades.NombreActividad
-                                            </a>
+                                            }
 
-                                        }
-
-                                        @if (itemCasos.ListVwModelActividadesAsistentes.Count <= 0)
-                                        {
-                                            <div class="stat-heading">Sin Actividades</div>
-                                        }
+                                            @if (itemCasos.ListVwModelActividadesAsistentes.Count <= 0)
+                                            {
+                                                <div class="stat-heading">Sin Actividades</div>
+                                            }
+                                        </div>
                                     </div>
                                 </div>
+
+
+
                             </div>
-
-
-
                         </div>
                     </div>
-                </div>
 
-            }
+                }
 
-        </div>
+            </div>
         <partial name="../Modals/_LargeModalPartial" />
     </div>
 
